--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps: 
-      - uses: action/checkout@v3
+      - uses: actions/checkout@v3
       - run: cd auth-service && docker build -t navaneethvinod/educore-auth-service .
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
         env: 
