--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -18,3 +18,13 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: docker push navaneethvinod/educore-auth-service:latest
+
+      - uses: digitalocean/action-doctl@v2
+      
+        with:
+          token: ${{ secrets.DIGITAL_OCEAN_ACCESS_TOKEN }}
+          
+      - run: doctl kubernetes cluster kubeconfig save k8s-1-31-1-do-5-blr1-1734852479838
+
+      - run: kubectl rollout restart deployment educore-auth-depl
+            
