build frontend for prod 2

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,49 +1,15 @@
-# FROM node AS build
-
-# WORKDIR /app
-
-# COPY package.json .
-
-# RUN npm install
-
-# COPY . .
-
-# ARG VITE_STRIPE_KEY
-# ARG VITE_GOOGLE_CLIENT_ID
-
-
-# ENV VITE_STRIPE_KEY=${VITE_STRIPE_KEY}
-# ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
-
-
-# RUN npm run dev
-
-
-# FROM node:18-alpine
-
-# WORKDIR /app
-
-# RUN npm install -g serve
-
-# COPY --from=build /app/build /app
-
-# EXPOSE 5173
-
-# CMD ["serve", "-s", ".", "-l", "5173"]
-
-
-# Use an official Node.js runtime as a parent image
+# Use an official Node.js runtime as a parent image for the build stage
 FROM node AS build
 
 # Set the working directory to /app
 WORKDIR /app
 
-# Copy the package.json and package-lock.json files first
+# Copy the package.json and package-lock.json files first to install dependencies
 COPY package*.json ./
 
+# Set environment variables for VITE_STRIPE_KEY and VITE_GOOGLE_CLIENT_ID
 ARG VITE_STRIPE_KEY
 ARG VITE_GOOGLE_CLIENT_ID
-
 
 ENV VITE_STRIPE_KEY=${VITE_STRIPE_KEY}
 ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
@@ -51,20 +17,26 @@ ENV VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
 # Install frontend dependencies
 RUN npm install
 
-FROM node:18-alpine
-
-
-WORKDIR /app
-
-
-RUN npm install -g serve
-
-
 # Copy the rest of the application code
 COPY . .
 
-# Expose the port that Vite will serve the app on
+# Build the Vite app
+RUN npm run build
+
+# Use a smaller Node.js image for serving the built app
+FROM node:18-alpine
+
+# Set the working directory to /app
+WORKDIR /app
+
+# Install the 'serve' package globally to serve the app
+RUN npm install -g serve
+
+# Copy the production build from the previous stage (from /app/dist to /app)
+COPY --from=build /app/dist /app
+
+# Expose the port that the app will run on (Vite's default port is 5173)
 EXPOSE 5173
 
-# Command to run the app using Vite
+# Command to serve the built app using 'serve'
 CMD ["serve", "-s", ".", "-l", "5173"]
