--- a/infra/k8s/stateless/kafka.yaml
+++ b/infra/k8s/stateless/kafka.yaml
@@ -20,6 +20,13 @@ spec:
                   name: zookeeper
                   ports:
                       - containerPort: 2181
+                  resources:
+            requests:
+              memory: "1Gi"
+              cpu: "500m"
+            limits:
+              memory: "2Gi"
+              cpu: "1"
 ---
 apiVersion: v1
 kind: Service
@@ -83,4 +90,3 @@ spec:
           protocol: TCP
           port: 9092
           targetPort: 9092  
-          
